--- a/completeMCNPfileCreate/completeMCNPfileCreate/completeMCNPfileCreate.vcxproj.filters
+++ b/completeMCNPfileCreate/completeMCNPfileCreate/completeMCNPfileCreate.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="dataoutputfunction.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="objdata.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="datastructure.h">
